# projectplanner-ci

./: .ci-gate-smoketest2  .ci-gate-smoketest3  .ci-gate-smoketest4  .ci-gate-smoketest5  .env.example  .gitignore  .mcp.json  README.md  _dbg.py  activity_store.py  agent.py  app.py  app_impl.py  attachments.py  auth.py  auth_store.py  background_jobs.py  bridge_attachment_monitor.py  build_plan_artifacts.py  ci_attribution.py  ci_gate_requests.py  ci_scratchpad_dispatch.py  ci_verify_dispatch.py  claims_store.py  co_fleet.py  comms.py  concurrency_limiter.py  constants.py  coordination_receipts.py  coordination_store.py  coordinator_audit.py  coordinator_daemon.py  coordinator_dispatch.py  coordinator_escalation.py  decisions_store.py  deliverable_breakdown.py  deliverable_contracts.py  deliverable_dogfood_fixtures.py  deliverable_policy.py  deliverables_store.py  (+303 more)
.claude/: settings.json
.cursor/: README.md  mcp.json
adapters/: README.md  agent_host.py  agent_host_enrollment.py  claude_cloud.py  claude_cloud_host.py  claude_personal_worker.py  claude_question_adapter.py  closure_verifier.py  cloud_execution.py  co_drain.py  codex_app_server.py  codex_local_worker.py  codex_personal_worker.py  conformance.py  cursor_personal_worker.py  direct_codex_session.py  marketplace.py  proof_work.py  repository_workspace.py  run_agent.py  switchboard_core.py  test_closure_verifier.py  wake_capabilities.py
assets/: Maxwell-Pitch-Deck.pptx
db/: __init__.py  connection.py  core.py  migrations.py  schema.py  write_queue.py
deliverable_closure/: __init__.py  test_closure_dispatch.py  test_closure_engine.py  test_closure_persistence.py  test_deliverable_closure_gate.py
deliverable_gates/: __init__.py  __main__.py  manifest.json  test_gate_registry.py
deploy/: Caddyfile  PROVISION.md  agent-host-release-public.pem  apply-least-privilege.sh  apply-resource-guards.sh  auto_deploy.sh  ci7-teardown-box-ci.sh  co-fleet-runtime-config.md  projectplanner-agent-host.service  projectplanner-autodeploy.service  projectplanner-autodeploy.timer  projectplanner-backup.service  projectplanner-backup.timer  projectplanner-batch.slice  projectplanner-ci-gate-request.service  projectplanner-ci-gate.service  projectplanner-ci-gate.timer  projectplanner-claim-gate.service  projectplanner-claim-gate.timer  projectplanner-coordinator-audit.service  projectplanner-coordinator-audit.timer  projectplanner-coordinator-autopilot.service  projectplanner-coordinator-dispatch.service  projectplanner-coordinator-dispatch.timer  projectplanner-coordinator-merge.service  projectplanner-coordinator-merge.timer  projectplanner-coordinator-review.service  projectplanner-coordinator-review.timer  projectplanner-digest.service  projectplanner-digest.timer  projectplanner-gateway.service  projectplanner-inbox.service  projectplanner-inbox.timer  projectplanner-interactive.slice  projectplanner-mcp.service  projectplanner-merge-coordinator.service  projectplanner-merge-coordinator.timer  (+29 more)
docs/: AGENT_ROADMAP.md  (+86 more)
(+1012 files in other folders)
